Fixed some problems from first PR - Changed injection method @Autowired now uses on c-tors, Created DTO.
Added message broker Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=alex
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.topic.my-topic=my-topic
