--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.username=alex
 spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.group-id=my-group
-spring.kafka.topic.my-topic=my-topic
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
